--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "classnames": "^2.3.1",
+    "color": "^4.2",
+    "css-selector-tokenizer": "^0.8.0",
+    "postcss-js": "^4.0.0",
+    "react-icons": "^4.3.1",
+    "tailwindcss": "^3.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "webpack serve --hot",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
@@ -38,8 +44,69 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9",
-    "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@parcel/css-cli": "^1.5.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "0.0.9",
+    "@tailwindcss/jit": "^0.1.18",
+    "@types/css-selector-tokenizer": "^0.7.1",
+    "@types/react": "17.0.27",
+    "@types/react-dom": "17.0.9",
+    "@types/tailwindcss": "2.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "@vitest/ui": "^0.7.10",
+    "autoprefixer": "10.0.4",
+    "babel-loader": "^8.2.2",
+    "c8": "^7.11.0",
+    "color-contrast-checker": "^2.1.0",
+    "core-js": "^3.21.1",
+    "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.3.9",
+    "postcss-cli": "8.3.0",
+    "postcss-import": "13.0.0",
+    "postcss-loader": "^6.1.1",
+    "postcss-nested": "5.0.1",
+    "pre-commit": "1.2.2",
+    "prejss-cli": "0.3.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-refresh": "^0.11.0",
+    "rollup": "^2.56.3",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "rtlcss": "3.0.0",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "tailwindcss": "^2.2.16",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.4",
+    "vitest": "^0.7.10",
+    "webpack": "^5.58.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
